// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect.ts should be clearable with prop, dirty and multi select 1`] = `
<div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-select--is-multi">
  <div class="v-input__control">
    <div role="button"
         aria-haspopup="listbox"
         aria-expanded="false"
         aria-owns="list-150"
         class="v-input__slot"
    >
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma">
            1
          </div>
          <input aria-readonly="false"
                 autocomplete="off"
                 id="input-150"
                 readonly
                 type="text"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--clear">
            <button class="v-icon--link v-icon notranslate theme--light"
                    aria-hidden="false"
                    type="button"
                    aria-label="$vuetify.input.clear"
                    tabindex="-1"
            >
            </button>
          </div>
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <span class="v-icon notranslate theme--light"
                  aria-hidden="true"
            >
            </span>
          </div>
        </div>
        <input type="hidden"
               value="1"
        >
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VSelect.ts should be clearable with prop, dirty and single select 1`] = `
<div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
  <div class="v-input__control">
    <div role="button"
         aria-haspopup="listbox"
         aria-expanded="false"
         aria-owns="list-141"
         class="v-input__slot"
    >
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma">
            1
          </div>
          <input aria-readonly="false"
                 autocomplete="off"
                 id="input-141"
                 readonly
                 type="text"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--clear">
            <button class="v-icon--link v-icon notranslate theme--light"
                    aria-hidden="false"
                    type="button"
                    aria-label="$vuetify.input.clear"
                    tabindex="-1"
            >
            </button>
          </div>
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <span class="v-icon notranslate theme--light"
                  aria-hidden="true"
            >
            </span>
          </div>
        </div>
        <input type="hidden"
               value="1"
        >
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VSelect.ts should use scoped slot for selection generation 1`] = `
<div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
  <div class="v-input__control">
    <div role="button"
         aria-haspopup="listbox"
         aria-expanded="false"
         aria-owns="list-32"
         class="v-input__slot"
    >
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div>
            foo - from slot
          </div>
          <input aria-readonly="false"
                 autocomplete="off"
                 id="input-32"
                 readonly
                 type="text"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <span class="v-icon notranslate theme--light"
                  aria-hidden="true"
            >
            </span>
          </div>
        </div>
        <input type="hidden"
               value="foo"
        >
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VSelect.ts should use slotted append-item 1`] = `
<div class="v-sheet theme--light v-list v-select-list theme--light"
     role="listbox"
     id="list-16"
     tabindex="-1"
>
  <div aria-selected="false"
       id="list-item-23-0"
       role="option"
       tabindex="-1"
       class="v-list-item theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        foo
      </div>
    </div>
  </div>
  <div>
    foo
  </div>
</div>
`;

exports[`VSelect.ts should use slotted prepend-item 1`] = `
<div class="v-sheet theme--light v-list v-select-list theme--light"
     role="listbox"
     id="list-1"
     tabindex="-1"
>
  <div>
    foo
  </div>
  <div aria-selected="false"
       id="list-item-8-0"
       role="option"
       tabindex="-1"
       class="v-list-item theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        foo
      </div>
    </div>
  </div>
</div>
`;
